--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <body>
+    <body style="margin: 0px; background-color: #2e2e2e;">
         <iframe src="https://www.craft.do/s/RwAuC1aEVksRsD" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
     </body>
 </html>
