--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    </head>
     <body style="margin: 0px; background-color: #2e2e2e;">
-        <iframe src="https://www.craft.do/s/RwAuC1aEVksRsD" frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
+        <iframe src="https://www.craft.do/s/RwAuC1aEVksRsD" seamless frameborder="0" style="overflow:hidden;height:100%;width:100%" height="100%" width="100%"></iframe>
     </body>
 </html>
